# C-projects

./: CMakeLists.txt
src/: RPNCalc.c  brainfuck_interpreter.c  random_functions.c  sudoku_solver.c  tmp.c
